EL--3306 - Additional Alignment Fixes

--- a/src/styles/input-controls.less
+++ b/src/styles/input-controls.less
@@ -343,3 +343,17 @@ tags-input .tags .input:-ms-input-placeholder {
     color: @form-control-placeholder-color;
     opacity: 1;
 }
+
+// Provide a checkbox/radiobutton layout utility
+.checkbox-container,
+.radio-button-container,
+.toggleswitch-container {
+    display: flex;
+    flex-direction: column;
+
+    ux-checkbox,
+    ux-radio-button,
+    ux-toggleswitch {
+        margin-bottom: 5px;
+    }
+}
